# DocAgent

./: .docagentignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  action.yml  llms.txt  pyproject.toml
.github/workflows/: test.yml  verify.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/decisions/: 0001-phase-8-multi-provider-backend.md  0001-spike-results.json  0001-spike-results.md
.planning/phases/05-budget-telemetry/: 05-SUMMARY.md
.planning/phases/06-how-to-guides-artifact/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-SUMMARY.md  06-05-SUMMARY.md  06-06-SUMMARY.md  06-SUMMARY.md
.planning/phases/07-typescript-api-reference/: 07-SUMMARY.md
.planning/phases/08-multi-provider-backends/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  (+11 more)
benchmarks/regeneration/: .gitignore  KNOWN-GAPS.md  README.md  corpus.yaml  run.py  score.py
docagent/: __init__.py  _logging.py  citations.py  cli.py  ignore.py  pricing.py  writer.py
docagent/adapters/: base.py  fallback.py  python.py  typescript.py
docagent/artifacts/: _api_reference_render.py  _base.py  _cleaners.py  _how_to_render.py  _jsonc.py  _module_discovery.py  _topic_discovery.py  _ts_module_discovery.py  agents_md.py  api_reference.py  builtins.py  claude_md.py  how_to_guides.py  llms_txt.py  readme.py  registry.py
docagent/backends/: _litellm_pricing.py  agent_sdk.py  base.py  litellm_backend.py
docagent/core/: affected.py  budget.py  diff.py  orchestrator.py  paths.py  scanner.py  state.py
docagent/index/: mentions.py  store.py
docagent/parser/: treesitter.py
docagent/prompts/: agents_md.py  api_reference.py  claude_md.py  how_to_guides.py  llms_txt.py  readme.py
docagent/verify/: citations.py  docs_site.py  judge.py  links.py  markdownlint.py  pipeline.py  secrets.py
docs/how-to/: aggregate-per-repo-metrics-into-aggregate-json.md  clone-and-strip-a-repo-without-invoking-docagent.md  configure-the-litellm-backend-for-gemini-or-openrouter.md  enable-debug-logging-for-docagent.md  extract-python-symbols-with-pythonadapter.md  generate-all-artifacts-with-docagent-init.md  install-docagent-with-multi-provider-extras.md  re-verify-on-disk-artifacts-with-docagent-verify.md  restrict-a-run-to-a-single-artifact-with-only.md  run-an-identity-baseline-to-measure-judge-noise-floor.md  run-the-regeneration-benchmark-against-one-repo-from-python.md  run-the-regeneration-benchmark-from-the-cli.md  score-a-regeneration-result-with-llm-judges.md  splice-a-docstring-into-a-python-source-file.md  splice-doc-comments-into-rust-go-java-c-via-fallbackadapter.md
docs/reference/: benchmarks.regeneration.run.md  benchmarks.regeneration.score.md  docagent._logging.md  docagent.adapters.base.md  docagent.adapters.fallback.md  docagent.adapters.python.md  docagent.adapters.typescript.md  docagent.artifacts._api_reference_render.md
scripts/: measure_citation_rate.py  spike_phase8_citation_rate.py
tests/golden/: _harness.py  test_api_reference_ts_snapshot.py  test_how_to_guides_snapshot.py  test_litellm_backend_snapshot.py  test_readme_snapshot.py  test_single_file_artifacts_snapshot.py
tests/golden/fixtures/tinylib/: LICENSE  pyproject.toml
tests/golden/fixtures/tinylib/tinylib/: __init__.py  cli.py
tests/integration/: test_api_reference_flow.py  test_typescript_update_flow.py  test_update_flow.py  test_verify_flow.py
tests/unit/: test_affected.py  test_api_reference_artifact.py  test_api_reference_render.py  test_backend_preflight.py  test_backend_token_extraction.py  test_benchmark_run.py  test_benchmark_score.py  test_budget.py  test_citations_gate.py  test_citations_grammar.py  test_cleaners.py  test_cli_backend_flag.py  test_cli_max_cost.py  test_how_to_guides_artifact.py  test_how_to_guides_prompts.py  test_how_to_render.py  test_jsonc.py  test_links_gate.py  test_litellm_backend.py  test_litellm_backend_tool_loop.py  test_litellm_pricing.py  test_logging_setup.py  test_markdownlint_gate.py  test_mentions_extraction.py  test_module_discovery.py  test_orchestrator_budget.py  test_orchestrator_budget_litellm.py  test_orchestrator_post_write.py  test_orchestrator_token_attribution.py  test_orchestrator_too_small.py  test_paths.py  test_pricing.py  test_python_adapter_byte_ranges.py  test_python_adapter_signatures.py  test_skeleton.py  test_store_queries.py  test_topic_discovery.py  test_ts_module_discovery.py  test_typescript_adapter.py  test_verifier_pipeline.py
(+31 files in other folders)
