[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "docagent"
version = "0.1.0-dev"
description = "Repository documentation agent for humans and coding agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DocAgent contributors" }]
keywords = ["documentation", "ai", "llm", "agent", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1; python_version>='3.11'",
    "libcst>=1.4",
    "jedi>=0.19",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-cpp>=0.23",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.10",
    "pathspec>=0.12",
    "gitpython>=3.1",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pymarkdownlnt>=0.9",
]
# Phase 8 — multi-provider backend via LiteLLM (Gemini / OpenRouter / Anthropic-direct).
# Gated behind extras to keep the default `pip install docagent` dep tree small.
# See: .planning/decisions/0001-phase-8-multi-provider-backend.md
multi = [
    "litellm>=1.50",
]

[project.scripts]
docagent = "docagent.cli:app"

[project.urls]
Homepage = "https://github.com/docagent-ai/docagent"
Issues = "https://github.com/docagent-ai/docagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["docagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false

# LiteLLM is an optional extra (`docagent[multi]`); not always installed.
# Allow the missing import without weakening strict mode globally.
[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true
disallow_untyped_defs = false
