[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinylib"
version = "0.1.0"
description = "A tiny library used as a DocAgent golden-test fixture."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["typer>=0.12"]

[project.scripts]
tinylib = "tinylib.cli:app"
